metadata/force-app/main/default/objects/Commission_Conditions__c/Commission_Conditions__c.object-meta.xml
<CustomObject>
    <label>Commission Conditions</label>
    <nameField>
        <label>Commission Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>