metadata/force-app/main/default/objects/Commission_Conditions__c/fields/High_tier_commission__c.field-meta.xml
<CustomField>
    <fullName>High_tier_commission__c</fullName>
    <label>High tier commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>