metadata/force-app/main/default/objects/Commission_Conditions__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambassador Partner</fullName>
            </value>
            <value>
                <fullName>Certified Business Partner</fullName>
            </value>
            <value>
                <fullName>Certified Services Partner</fullName>
            </value>
            <value>
                <fullName>Certified Partner</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>