metadata/force-app/main/default/objects/Commission_Conditions__c/fields/Recurring_Commission__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Commission?</label>
    <type>Checkbox</type>
</CustomField>